# GasyBoy

./: .gitignore  .gitmodules  CMakeLists.txt  GasyBoy.sln  GasyBoy.vcxproj  GasyBoy.vcxproj.filters  README.md  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  defs.h  eventListener.cpp  eventListener.h  gameboy.cpp  gameboy.h  gamepad.cpp  gamepad.h  gpu.cpp  gpu.h  interrupt.cpp  main.cpp  makefile  mmu.cpp  mmu.h  register.cpp  register.h  tatqqgit stash  tatus  timer.cpp  timer.h
.github/workflows/: build.yml
Headers/: cpu.h  eventListener.h  gameboy.h  gamepad.h  gpu.h  interrupt.h  mmu.h  timer.h
SDL2/lib/: SDL2.lib  SDL2main.lib
Sources/: cartridge.cpp  cpu.cpp  eventListener.cpp  gameboy.cpp  gamepad.cpp  main.cpp
docs/: gasyboy.js  gasyboy.wasm
include/: cartridge.h  cpu.h  eventListener.h  gameboy.h  gamepad.h  logger.h  mmu.h  register.h  registers.h
include/tmp/: cartridge.h  cpu.h  defs.h  eventListener.h  gameboy.h  gamepad.h  utils.h
src/: cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  debugger.cpp  debugger.h  defs.h  eventListener.cpp  gameBoyProvider.cpp  gameBoyProvider.h  gameboy.cpp  gameboy.h  gamepad.cpp  gamepad.h  gbException.cpp  gbException.h  gpu.cpp  gpu.cpp_tmp  gpu.h  instructions.h  interrupt.cpp  interruptManager.cpp  interruptManager.h  logger.cpp  logger.h  main.cpp  mbc.cpp  mbc.h  mmu.cpp  mmu.h  ppu.cpp  ppu.h  register.cpp  register.h  registers.cpp  registers.h  renderer.cpp  renderer.h  tetris.h  timer.cpp  (+3 more)
src/debugger/: debugger.cpp  debugger.h  disassembler.cpp  disassembler.h
src/instructions/: adc.cpp  add.cpp  and.cpp  bit.cpp  call.cpp  cbOpcodes.cpp  ccf.cpp  cp.cpp  cpl.cpp  daa.cpp  dec.cpp  di.cpp  ei.cpp  halt.cpp  inc.cpp  jmp.cpp  ld.cpp  nop.cpp  opcodes.cpp  or.cpp  ret.cpp  rl.cpp  rr.cpp  rst.cpp  sbc.cpp  scf.cpp  sr.cpp  sub.cpp  swap.cpp  xor.cpp
src/instructions/ld/: ld.cpp
src/providers/: cpuProvider.cpp  cpuProvider.h  gameBoyProvider.cpp  gameBoyProvider.h  gamepadProvider.cpp  gamepadProvider.h  interruptManagerProvider.cpp  interruptManagerProvider.h  mmuProvider.cpp  mmuProvider.h  ppuProvider.cpp  ppuProvider.h  registersProvider.cpp  registersProvider.h  timerProvider.cpp  timerProvider.h  utilitiesProvider.cpp  utilitiesProvider.h
tests/: CMakeLists.txt  gasyboyCpuTestHelper.cpp  gasyboyCpuTestHelper.h  main.cpp  test_cpu.cpp  tests_main.cpp
tools/scripts/linux/: build.sh  build_wasm.sh  run_tests.sh
tools/scripts/windows/: build.bat  build_wasm.bat  run_tests.bat
wasm/: index.html
